--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -229,7 +229,7 @@
 
   /* Huge watermark “iorad” */
   &::before {
-    content: "iorad";
+    content: "iQrad";
     position: absolute;
     top: -2rem; left: 50%;
     transform: translateX(-50%);
