--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -25,6 +25,7 @@
 // 7) Page Styles (specific page layouts)
 @import "pages/about";
 @import "pages/kontakt";
+@import "pages/katalog";
 
 // 8) Theme Overrides (utility classes, code block, container)
 @import "themes/default";
