--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -8,7 +8,8 @@ $success:       #23C552 !default;
 $secondary:     #504E4C !default;
 $body-bg:       #F0ECE4 !default;
 $body-color:    #212529 !default;
-
+$font-color-secondary:    #898682 !default;
+$font-color-gray-60: #778294;
 // Typography
 $font-family-sans-serif: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, Arial, "Noto Sans", sans-serif !default;
 $font-family-monospace:  "Source Code Pro", Menlo, Monaco, Consolas, "Courier New", monospace !default;
