--- a/src/scss/pages/_kontakt.scss
+++ b/src/scss/pages/_kontakt.scss
@@ -156,7 +156,7 @@
       line-height: 1.4;
       font-size: .75rem;
       font-weight: 600;
-      color: #898682;
+      color: $font-color-secondary;
     }
   }
 
